[package]
name = "red_shore_host"
version = "0.1.0"
edition = "2021"
authors = ["Jackson Ming Hu <huming2207@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
daemonize = "0.4.1"
serde = "1.0.152"
toml = "0.7.0"
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
chrono = "0.4.23"
tokio = { version = "1.24.2", features = ["full"] }
tokio-serial = "5.4.1"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.3.0"
thiserror = "1.0"
futures-util = "0.3.26"
tokio-stream = "0.1.12"
futures = "0.3.26"
crc = "3.0"
